修正每個頁面的 footer 元素

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -75,7 +75,8 @@
 .btn-search{
     padding:5px 10px !important;
 }
-.btn-outline-success{
+.form-inline .btn-outline-success{
+    border: 1px solid transparent;
     border-color: #28a745;
 }
 
