--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -383,12 +383,14 @@
   </div>
 
   <!---------預告書籍--end----------------->
+
+  <!---------footer--start----------------->
   <footer>
     <div class="co">
       <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
     </div>
   </footer>
-
+<!---------footer--end----------------->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
