--- a/src/main/resources/templates/magazine.html
+++ b/src/main/resources/templates/magazine.html
@@ -305,7 +305,13 @@
 
 <!-------------------- new magazines  end----------------------------->
 
-
+<!-- footer start -->
+<footer>
+  <div class="co">
+    <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
+  </div>
+</footer> 
+<!-- footer end -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -313,11 +319,7 @@
     <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
     <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
-    <footer>
-        <div class="co">
-          <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
-        </div>
-      </footer>  
+     
 </body>
 
 
