--- a/src/main/resources/templates/model-hf.html
+++ b/src/main/resources/templates/model-hf.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="model-css.css">
+    <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="/static/css/model-css.css">
    
     <title>BookLand Bookshop</title>
   </head>
@@ -104,19 +104,21 @@
     </navbar>
      <!-- 導覽列 end -->
 
+     <!-- footer 區 start -->
+    <footer>
+      <div class="co">
+        <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
+      </div>
+    </footer>  
+    <!-- footer 區 end -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
+    <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
    
-    <!-- footer 區 start -->
-    <footer>
-        <div class="co">
-          <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
-        </div>
-      </footer>  
-      <!-- footer 區 end -->
+
 </body>
 
 
