--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -168,7 +168,7 @@
             </div>
             <div class="form-group cgpassword-form">
               <label for="exampleInputPass">密碼</label>
-              <a href="javascript:void(0);">設定新的密碼</a>
+              <a href="newpass.html">設定新的密碼</a>
             </div>
             <div class="mb-button">
               <button type="button" class="btn btn-outline-secondary btn-block mb-btn">取消</button>
