--- a/src/main/resources/templates/orderdetail.html
+++ b/src/main/resources/templates/orderdetail.html
@@ -1,4 +1,4 @@
-
+<!-- 開頭模板區 start -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/model-css.css">
+    <link rel="stylesheet" href="/static/css/orderdetail.css">
    
     <title>BookLand Bookshop</title>
   </head>
@@ -103,6 +104,11 @@
           </nav>
     </navbar>
      <!-- 導覽列 end -->
+     <!-- 開頭模板區 end -->
+
+     <!-- 訂單明細 start -->
+     
+     <!-- 訂單明細 end -->
 
      <!-- footer 區 start -->
     <footer>
