--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -108,13 +108,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/static/img/banner3.png" alt="Paul Cezanne">
+        <img class="d-block w-100" src="/static/img/banner3.jpg" alt="Paul Cezanne">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/static/img/banner6.png" alt="Alfred Stieglitz">
+        <img class="d-block w-100" src="/static/img/banner6.jpg" alt="Alfred Stieglitz">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/static/img/banner7.png" alt="John Ritto Penniman">
+        <img class="d-block w-100" src="/static/img/banner7.jpg" alt="John Ritto Penniman">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -341,7 +341,7 @@
   <div class="container ">
     <div class="row">
       <div class="col-12 col-sm-6">
-        <img src="/static/img/comingup1.png" alt="The Echo" width="100%">
+        <img src="/static/img/comingup1.jpg" alt="The Echo" width="100%">
       </div>
       <div class="col-12 col-sm-6 text-booklaunch">
         <h5 class="date">上架日 : 5/5</h5>
@@ -363,7 +363,7 @@
   <div class="container ">
     <div class="row">
       <div class="col-12 col-sm-6">
-        <img src="/static/img/comingup2.png" alt="Alfred Sisley" width="100%">
+        <img src="/static/img/comingup2.jpg" alt="Alfred Sisley" width="100%">
       </div>
       <div class="col-12 col-sm-6 text-booklaunch">
         <h5 class="date">上架日 : 6/10</h5>
