新增 view.js 與修正 QR code 圖片路徑
view.js: 新增父類別 BaseView 以提供其他子類繼承

--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -52,7 +52,7 @@
 
             <br>
             <strong>加 BookLand 好友吧 !</strong><br>
-            <img src="/static/css/icon/qrcode.jpg" alt="bookland-qr-code">
+            <img src="/static/css/icon/qrcode.png" alt="bookland-qr-code">
             <strong style="color:brown">ID : @454avqhn</strong><br>
             <p>任何問題都可詢問 BookLand ~<br>
               BookLand 會盡快回覆您 ~</p>
@@ -172,6 +172,7 @@
   <!-- local js files -->
   <script src="/static/js/config.js"></script>
   <script src="/static/js/helpers.js"></script>
+  <script src="/static/js/views/view.js"></script>
   <script src="/static/js/views/bookView.js"></script>
   <script src="/static/js/models/bookModel.js"></script>
   <script src="/static/js/controllers/bookController.js"></script>
