--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -155,6 +155,8 @@
   </div>
   <!-------------------- books  end---------------------------->
 
+  <div class="observer" style="border: 1px solid transparent"></div>
+
    <!-- footer 區 start -->
    <footer>
     <div class="co">
