--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -147,7 +147,7 @@
           <div class="brspace">
           </div>
           <div class="arrow-1">
-            <a href="javascript:void(0);"><img src="/static/css/icon/arrow.svg" alt="arrow-icon" width="35px"></a>
+            <a href="insidepage.html"><img src="/static/css/icon/arrow.svg" alt="arrow-icon" width="35px"></a>
           </div>
         </div>
       </div>
