--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -102,79 +102,43 @@
   <!-- 導覽列 end -->
 
   <!-- 登入 & 註冊 start -->
-  <!-- 註冊選單 -->
   <div class="wrap">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-          aria-selected="true">註冊</a>
-      </li>
-
       <!-- 登入選單 -->
       <li class="nav-item">
-        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-          aria-selected="false">登入</a>
+        <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+           aria-selected="false">登入</a>
+      </li>
+      <!-- 註冊選單 -->
+      <li class="nav-item">
+        <a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+          aria-selected="true">註冊</a>
       </li>
     </ul>
 
     <!-- 登入註冊 共用方框 tab-all -->
     <div class="tab-all">
-      <!-- 註冊內容 -->
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-          <form class="loginform">
-            <div class="form-froup">
-              <label for="exampleInputEmail1">User Name</label>
-              <div class="inputerror">
-                <input type="text" id="username" class="form-control is-invalid" placeholder="User Name">
-                <small id="usererror" class="form-text text-muted">* 請輸入使用者帳號</small>
-              </div>
-            </div>
-            <div class="form-group email-form">
-              <label for="exampleInputEmail1">Email address</label>
-              <div class="inputerror">
-                <input type="email" class="form-control is-invalid" id="email" aria-describedby="emailHelp"
-                  placeholder="Enter email">
-                <small id="emailerror" class="form-text text-muted">* Email不是正確格式</small>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <div class="inputerror">
-                <input type="password" class="form-control is-invalid" id="password1" placeholder="Password"
-                  title="密碼至少8個字符">
-              </div>
-              <br>
-              <div class="inputerror">
-                <input type="password" class="form-control is-invalid" id="password2" placeholder="Confirm Password"
-                  title="再輸入一次密碼">
-                <small id="passworderror" class="form-text text-muted">* 密碼至少8個字符</small>
-              </div>
-            </div>
-            <button type="button" class="btn btn-secondary btn-block lo-btn">Sign Up</button>
-          </form>
-        </div>
-
         <!-- 登入內容 -->
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <form class="loginform">
+        <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <form class="loginform login-form">
             <button type="button" class="btn btn-primary btn-lg btn-block fb-btn"><img src="/static/css/icon/fb-icon-w.svg"
-                width="30px">Sign in with Facebook</button>
+                                                                                       width="30px">Sign in with Facebook</button>
             <button type="button" class="btn btn-danger btn-block go-btn"><img src="/static/css/icon/google.svg" width="30px">Sign
               in with Google</button>
             <div class="form-group email-form">
-              <label for="exampleInputEmail1">User Name</label>
+              <label for="username">User Name</label>
               <div class="inputerror">
-                <input type="text" class="form-control is-invalid " id="usernameLogin" aria-describedby="emailHelp"
-                  placeholder="User Name">
-                <small id="usererrorLogin" class="form-text text-muted">* 帳號輸入錯誤</small>
+                <input type="text" class="form-control" id="username" aria-describedby="emailHelp"
+                       placeholder="請輸入帳號">
+                <small class="form-text text-muted">* 帳號輸入錯誤</small>
               </div>
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
+              <label for="password">Password</label>
               <div class="inputerror">
-                <input type="password" class="form-control is-invalid " id="passwordLogin" placeholder="Password">
-                <small id="passworderrorLogin" class="form-text text-muted">* 密碼輸入錯誤</small>
+                <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼">
+                <small class="form-text text-muted">* 密碼輸入錯誤</small>
               </div>
             </div>
             <button type="button" class="btn btn-secondary btn-block lo-btn">Login</button>
@@ -183,33 +147,65 @@
             </div>
           </form>
         </div>
+        <!-- 註冊內容 -->
+        <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <form class="loginform reg-form">
+            <div class="form-froup">
+              <label for="reg-username">User Name</label>
+              <div class="inputerror">
+                <input type="text" name="reg-username" id="reg-username" class="form-control" placeholder="帳號至少 4 位英文或數字">
+                <small id="usererror" class="form-text text-muted">* 請輸入使用者帳號</small>
+              </div>
+            </div>
+            <div class="form-group email-form">
+              <label for="email">Email</label>
+              <div class="inputerror">
+                <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                  placeholder="請輸入常用的電子信箱">
+                <small id="emailerror" class="form-text text-muted">* Email不是正確格式</small>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="password1">Password</label>
+              <div class="inputerror">
+                <input type="password" class="form-control" name="password1" id="password1" placeholder="密碼至少 6 位英文或數字">
+                <small class="form-text text-muted">* 密碼至少8個字符</small>
+              </div>
+              <br>
+              <div class="inputerror">
+                <input type="password" class="form-control" name="password2" id="password2" placeholder="兩次密碼須相符">
+                <small class="form-text text-muted">* 密碼至少8個字符</small>
+              </div>
+            </div>
+            <button type="button" class="btn btn-secondary btn-block lo-btn">Sign Up</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
   <!-- 登入 & 註冊 end -->
 
-<!-- footer區 start -->
-<footer>
-  <div class="co">
-    <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a>
-    </span>
-  </div>
-</footer>
-<!-- footer區 end -->
+  <!-- footer區 start -->
+  <footer>
+    <div class="co">
+      <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a>
+      </span>
+    </div>
+  </footer>
+  <!-- footer區 end -->
 
-
-
-
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- third parties -->
+  <script src="/static/vendor/js/validate.js"></script>
   <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
-
-  
+  <!-- local js files -->
+  <script src="/static/js/config.js"></script>
+  <script src="/static/js/helpers.js"></script>
+  <script src="/static/js/views/view.js"></script>
+  <script src="/static/js/views/loginAndRegisterView.js"></script>
+  <script src="/static/js/models/loginAndRegisterModel.js"></script>
+  <script src="/static/js/controllers/loginAndRegisterController.js"></script>
 </body>
-
 </html>
