--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
   <!-- Required meta tags -->
@@ -121,7 +121,7 @@
       <div class="tab-content" id="myTabContent">
         <!-- 登入內容 -->
         <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <form class="loginform login-form">
+          <form class="loginform login-form" method="post" action="/perform_login">
             <button type="button" class="btn btn-primary btn-lg btn-block fb-btn"><img src="/static/css/icon/fb-icon-w.svg"
                                                                                        width="30px">Sign in with Facebook</button>
             <button type="button" class="btn btn-danger btn-block go-btn"><img src="/static/css/icon/google.svg" width="30px">Sign
@@ -129,19 +129,18 @@
             <div class="form-group email-form">
               <label for="username">User Name</label>
               <div class="inputerror">
-                <input type="text" class="form-control" id="username" aria-describedby="emailHelp"
-                       placeholder="請輸入帳號">
-                <small class="form-text text-muted">* 帳號輸入錯誤</small>
+                <input type="text" th:class="${error} ? 'form-control is-invalid' : 'form-control'" name="username" id="username" placeholder="請輸入帳號">
+                <small class="form-text text-muted">* 帳號或密碼輸入錯誤</small>
               </div>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <div class="inputerror">
-                <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼">
-                <small class="form-text text-muted">* 密碼輸入錯誤</small>
+                <input type="password" th:class="${error} ? 'form-control is-invalid' : 'form-control'" name="password" id="password" placeholder="請輸入密碼">
+                <small class="form-text text-muted">* 帳號或密碼輸入錯誤</small>
               </div>
             </div>
-            <button type="button" class="btn btn-secondary btn-block lo-btn">Login</button>
+            <button type="button" class="btn btn-secondary btn-block lo-btn submit">Login</button>
             <div class="links-container">
               <a href="javascript:void(0);">忘記密碼 ?</a>
             </div>
@@ -177,7 +176,7 @@
                 <small class="form-text text-muted">* 密碼至少8個字符</small>
               </div>
             </div>
-            <button type="button" class="btn btn-secondary btn-block lo-btn">Sign Up</button>
+            <button type="button" class="btn btn-secondary btn-block lo-btn submit">Sign Up</button>
           </form>
         </div>
       </div>
