--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,20 +19,30 @@
   <!-- icon & logo區 start -->
   <header>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container-fluid">
-          <div>
-            <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
-          </div>
-          <div class="icon-3">
-            <li class="user-none"><a href="account.html"><img src="/static/css/icon/user.svg" width="33px" class="user"></a></li>
-            <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-            <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-            <li><a href="javascript:void(0);"><img src="/static/css/icon/msg.svg" width="30px" class="msg"></a></li>
-          </div>
-          </ul>
+      <div class="container-fluid">
+        <div>
+          <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
         </div>
+        <div class="icon-3">
+          <li class="user-none"><a href="account.html">
+            <img src="/static/css/icon/user.svg" width="33px" class="user">
+            <p>username</p>
+          </a>
+          <ul class="list-group hide">
+            <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
+            <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
+            <li class="list-group-item"><a href="/logout">登出</a></li>
+          </ul>
+        </li>
+          <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px"
+                class="login"></a></li>
+          <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
+          <li><a href="javascript:void(0);"><img src="/static/css/icon/msg.svg" width="30px" class="msg"></a></li>
+        </div>
+        </ul>
       </div>
-</header>  
+    </div>
+  </header>
   <!-- icon & logo區 end -->
 
   <!-- 導覽列 start -->
@@ -107,7 +117,7 @@
       <!-- 登入選單 -->
       <li class="nav-item">
         <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-           aria-selected="false">登入</a>
+          aria-selected="false">登入</a>
       </li>
       <!-- 註冊選單 -->
       <li class="nav-item">
@@ -122,28 +132,64 @@
         <!-- 登入內容 -->
         <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           <form class="loginform login-form" method="post" action="/perform_login">
-            <button type="button" class="btn btn-primary btn-lg btn-block fb-btn"><img src="/static/css/icon/fb-icon-w.svg"
-                                                                                       width="30px">Sign in with Facebook</button>
-            <button type="button" class="btn btn-danger btn-block go-btn"><img src="/static/css/icon/google.svg" width="30px">Sign
+            <button type="button" class="btn btn-primary btn-lg btn-block fb-btn"><img
+                src="/static/css/icon/fb-icon-w.svg" width="30px">Sign in with Facebook</button>
+            <button type="button" class="btn btn-danger btn-block go-btn"><img src="/static/css/icon/google.svg"
+                width="30px">Sign
               in with Google</button>
             <div class="form-group email-form">
               <label for="username">User Name</label>
               <div class="inputerror">
-                <input type="text" th:class="${error} ? 'form-control is-invalid' : 'form-control'" name="username" id="username" placeholder="請輸入帳號">
+                <input type="text" th:class="${error} ? 'form-control is-invalid' : 'form-control'" name="username"
+                  id="username" placeholder="請輸入帳號">
                 <small class="form-text text-muted">* 帳號或密碼輸入錯誤</small>
               </div>
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <div class="inputerror">
-                <input type="password" th:class="${error} ? 'form-control is-invalid' : 'form-control'" name="password" id="password" placeholder="請輸入密碼">
+                <input type="password" th:class="${error} ? 'form-control is-invalid' : 'form-control'" name="password"
+                  id="password" placeholder="請輸入密碼">
                 <small class="form-text text-muted">* 帳號或密碼輸入錯誤</small>
               </div>
             </div>
             <button type="button" class="btn btn-secondary btn-block lo-btn submit">Login</button>
+
             <div class="links-container">
-              <a href="javascript:void(0);">忘記密碼 ?</a>
+
+              <!-- 忘記密碼  顯示modal start -->
+              <a href="#" type="button" class="btn " data-toggle="modal" data-target="#exampleModal">
+                忘記密碼 ?
+              </a>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">忘記您的密碼了嗎?</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <p>請填入您的email信箱 <br>
+                        我們會寄給您重設密碼的連結</p>
+                    </div>
+                    <label for="email"><img src="/static/css/icon/email.svg">Email Address</label>
+                    <div class="inputerror resetpass">
+                      <input type="email" class="form-control " name="email" id="email" aria-describedby="emailHelp"
+                        placeholder="請輸入常用的電子信箱">
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-success">Reset Password</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+            <!-- 忘記密碼  顯示modal end -->
           </form>
         </div>
         <!-- 註冊內容 -->
@@ -206,5 +252,14 @@
   <script src="/static/js/views/loginAndRegisterView.js"></script>
   <script src="/static/js/models/loginAndRegisterModel.js"></script>
   <script src="/static/js/controllers/loginAndRegisterController.js"></script>
+
+  <!-- 會員帳號管理 icon button -->
+  <script>
+    $('.user-none').hover(function(){
+      $('.hide').toggle();
+    })
+  </script>
+  
 </body>
+
 </html>
