--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -14,25 +14,38 @@
   <link rel="stylesheet" href="/static/css/bpage.css">
 
   <title>BookLand Bookshop</title>
+ 
 </head>
 
 <body>
   <header>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container-fluid">
-          <div>
-            <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
-          </div>
-          <div class="icon-3">
-            <li class="user-none"><a href="javascript:void(0);"><img src="/static/css/icon/user.svg" width="33px" class="user"></a></li>
-            <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-            <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-            <li><a href="javascript:void(0);"><img src="/static/css/icon/msg.svg" width="30px" class="msg"></a></li>
-          </div>
-          </ul>
+      <div class="container-fluid">
+        <div>
+          <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
         </div>
+        <div class="icon-3 user-list">
+          <li class="user-none">
+            <a href="javascript:void(0);">
+              <img src="/static/css/icon/user.svg" width="33px" class="user" id="user">
+              <p>username</p>
+            </a>
+            <ul class="list-group hide">
+              <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
+              <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
+              <li class="list-group-item"><a href="/logout">登出</a></li>
+            </ul>
+
+          </li>
+          <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px"
+                class="login"></a></li>
+          <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
+          <li><a href="javascript:void(0);"><img src="/static/css/icon/msg.svg" width="30px" class="msg"></a></li>
+        </div>
+        </ul>
       </div>
-</header>  
+    </div>
+  </header>
 
   <navbar>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -101,7 +114,7 @@
       </div>
     </nav>
   </navbar>
-<!-- 開頭模板區 end -->
+  <!-- 開頭模板區 end -->
 
   <!--------------------麵包屑start----------------------------->
   <div class="col-12 text-center">
@@ -136,7 +149,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="card">
-          <img class="card-img-top" src="/static/img/books/d07.jpg" alt="sunday world" >
+          <img class="card-img-top" src="/static/img/books/d07.jpg" alt="sunday world">
           <div class="card-body">
             <p class="card-text">Sunday World</p>
             <p><strong>NT 975</strong></p>
@@ -163,9 +176,9 @@
             <p class="card-text">Helen Jean 1912</p>
             <p><strong>NT 530</strong></p>
             <div class="d-btn">
-            <button type="button" class="btn btn-outline-dark">more</button>
-            <button type="button" class="btn btn-outline-danger">Add to Cart</button>
-          </div>
+              <button type="button" class="btn btn-outline-dark">more</button>
+              <button type="button" class="btn btn-outline-danger">Add to Cart</button>
+            </div>
           </div>
         </div>
       </div>
@@ -282,24 +295,15 @@
     </div>
   </div>
 
-<!-------------------- new books  end----------------------------->
+  <!-------------------- new books  end----------------------------->
 
-<!-- footer start -->
-<footer>
-  <div class="co">
-    <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
-  </div>
-</footer>
-<!-- footer end -->
-
-
-
-
-
-
-
-
-
+  <!-- footer start -->
+  <footer>
+    <div class="co">
+      <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
+    </div>
+  </footer>
+  <!-- footer end -->
 
 
   <!-- Optional JavaScript -->
@@ -308,8 +312,12 @@
   <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
   <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
 
-    
-  
+  <!-- 會員帳號管理 icon button -->
+  <script>
+    $('.user-none').hover(function(){
+      $('.hide').toggle();
+    })
+  </script>
 </body>
 
 
