--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
           <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px"
                 class="login"></a></li>
           <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-          <li><a href="javascript:void(0);"><img src="/static/css/icon/msg.svg" width="30px" class="msg"></a></li>
+          <li><a href="javascript:void(0);"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
         </div>
         </ul>
       </div>
@@ -174,16 +174,14 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <p>請填入您的email信箱 <br>
-                        我們會寄給您重設密碼的連結</p>
+                      <p>我們會寄給您重設密碼的連結<br>
+                        請至您的Email收信</p>
                     </div>
-                    <label for="email"><img src="/static/css/icon/email.svg">Email Address</label>
-                    <div class="inputerror resetpass">
-                      <input type="email" class="form-control " name="email" id="email" aria-describedby="emailHelp"
-                        placeholder="請輸入常用的電子信箱">
-                    </div>
+                    <label for="email"><img src="/static/css/icon/email.svg">Email</label>
+                    <p class="check">沒收到郵件嗎?  秒 </p>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-success">Reset Password</button>
+                      <button type="button" class="btn btn-success">再次寄送</button>
+                      <!-- 從mail連線到 forgotpass.html頁面 -->
                     </div>
                   </div>
                 </div>
