--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -87,11 +87,9 @@
     font-size: 16px;
     color:#495057;
 }
-
-.modal-content input{
-    width: 250px;
-    margin-bottom: 20px;
-
+.modal-content .check{
+    color:#dc3545;
+    font-weight: bold;
 }
 /* modal style end */
 
