--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -1,4 +1,4 @@
-<!-- 開頭模板區 start -->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/model-css.css">
-    <link rel="stylesheet" href="/static/css/bpage.css">
+    <link rel="stylesheet" href="/static/css/message.css">
    
     <title>BookLand Bookshop</title>
   </head>
@@ -18,30 +18,30 @@
   <body>
     <!-- logo & icon區 start -->
     <header>
-      <div class="jumbotron jumbotron-fluid">
-          <div class="container-fluid">
-            <div>
-              <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
-            </div>
-            <div class="icon-3">
-              <li class="user-none"><a href="account.html">
-                <img src="/static/css/icon/user.svg" width="33px" class="user">
-                <p>username</p>
-              </a>
-              <ul class="list-group hide">
-                <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
-                <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
-                <li class="list-group-item"><a href="/logout">登出</a></li>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container-fluid">
+              <div>
+                <a href="bookland_home.html"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
+              </div>
+              <div class="icon-3">
+                <li class="user-none"><a href="account.html">
+                  <img src="/static/css/icon/user.svg" width="33px" class="user">
+                  <p>username</p>
+                </a>
+                <ul class="list-group hide">
+                  <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
+                  <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
+                  <li class="list-group-item"><a href="/logout">登出</a></li>
+                </ul>
+              </li>
+                <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
+                <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
+                <li><a href="javascript:void(0);"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
+              </div>
               </ul>
-            </li>
-              <li class="login-none"><a href="login.html"><img src="/static/css/icon/login.svg" width="30px" class="login"></a></li>
-              <li><a href="cart.html"><img src="/static/css/icon/cart.svg" width="25px" class="cart"></a></li>
-              <li><a href="javascript:void(0);"><img src="/static/css/icon/msg3.svg" width="30px" class="msg"></a></li>
             </div>
-            </ul>
           </div>
-        </div>
-  </header>  
+    </header>  
   <!--logo & icon區 end -->
 
   <!-- 導覽列 start -->
@@ -113,35 +113,54 @@
           </nav>
     </navbar>
      <!-- 導覽列 end -->
-     <!-- 開頭模板區 end -->
 
-     <!--------------------麵包屑  start----------------------------->
-  <div class="col-12 text-center">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb alig">
-        <li class="breadcrumb-item"><a href="bookland_home.html">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">About</li>
-      </ol>
-    </nav>
-  </div>
-  <!--------------------麵包屑  end----------------------------->
-
-  <!--------------------title start----------------------------->
-  <div class="title">
-    <h3>ABOUT</h3>
-  </div>
-  <!--------------------title end---------------------------->
-
-
- 
-  <!-- footer 區 start -->
-  <footer>
-    <div class="co">
-      <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
+     <!-- message 區 start -->
+     <div class="changepass-form">
+      <div class="card border-info mb-3 passform">
+        <div class="card-header">Contact us</div>
+        <div class="card-body text-info">
+          <form class="loginform">
+            <div class="form-group">
+              <label for="exampleInputPassword1">姓名</label>
+              <div class="inputerror">
+                <input type="password" class="form-control " id="newpassword1" placeholder="New Password">
+              </div>
+              <br>
+              <label for="exampleInputPassword1">E-mail</label>
+              <div class="inputerror">
+                <input type="password" class="form-control " id="newpassword2" placeholder="Confirm Password">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect1">問題</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">留言</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </div>
+            <div class="new-btn">
+              <button type="button" class="btn btn-secondary btn-block newpass-btn">Send Message</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-  </footer>  
-  <!-- footer 區 end -->
+      <!-- message 區 end -->
 
+     <!-- footer 區 start -->
+    <footer>
+      <div class="co">
+        <span>Copyright &copy; 2021 <a class="backhome" href="bookland_home.html"><strong>BookLand</strong></a> </span>
+      </div>
+    </footer>  
+    <!-- footer 區 end -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -155,9 +174,8 @@
         $('.hide').toggle();
       })
     </script>
-  
+
 </body>
 
 
-  
 </html>
