--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -94,7 +94,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="magazine.html">MAGAZINES</a>
+          <a class="nav-link" href="/book/magazine">MAGAZINES</a>
         </li>
 
         <li class="nav-item">
