--- a/src/main/resources/templates/insidepage.html
+++ b/src/main/resources/templates/insidepage.html
@@ -1,6 +1,6 @@
 <!-- 開頭模板區 start -->
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
   <!-- Required meta tags -->
@@ -126,13 +126,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/static/img/books/f01_p1.jpg" alt="Paul Gauguin">
+              <img class="d-block w-100" th:src="${book.imageUrl.replace('.jpg', '')}+_p1.jpg" alt="Paul Gauguin">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/static/img/books/f01_p2.jpg">
+              <img class="d-block w-100" th:src="${book.imageUrl.replace('.jpg', '')}+_p2.jpg">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/static/img/books/f01_p3.jpg">
+              <img class="d-block w-100" th:src="${book.imageUrl.replace('.jpg', '')}+_p3.jpg">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -148,8 +148,8 @@
       </div>
       <!-- 文字書介區 start -->
       <div class="col-12  col-lg-5 txt">
-        <h4>Paul Gauguin</h4>
-        <h5><small>NT</small> 700</h5>
+        <h4 th:text="${book.name}"></h4>
+        <h5><small>NT</small> <span th:text="${book.price}"></span></h5>
         <div class="cart-btn">
           <!-- 按下button 增加到購物車  -->
           <button type="button" class="btn btn-warning">Add to cart</button>
@@ -167,8 +167,8 @@
             </div>
             <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
-                <p>書籍編號 : f01</p>
-                <p>出版社 : ELE</p>
+                <p>書籍編號 : <span th:text="${book.bookNumber}"></span></p>
+                <p>出版社 : <span th:text="${book.publisher}"></span></p>
 
               </div>
             </div>
@@ -184,9 +184,7 @@
               <img src="/static/css/icon/book.svg" width="25px">
             </div>
             <div id="collapseTwo" class="collapse " aria-labelledby="headingTwo" data-parent="#accordionExample">
-              <div class="card-body booktxt">
-                保羅·高更（Eugène Henri Paul Gauguin
-                1848年6月7日－1903年5月8日），生於法國巴黎，印象派畫家。大部份藝術史家將他歸於後印象派。他死後作品才開始名聲大噪。他是印象派的代表人物，除去繪畫之外，在雕塑、陶藝、版畫和寫作上也有一定的成就。他對色彩的使用促使了綜合主義（Synthetism）的產生，加上分隔主義(Cloisonnism)的影響，也為原始主義的產生鋪平了道路。
+              <div th:text="${book.description}" class="card-body booktxt">
               </div>
             </div>
           </div>
